--- a/hongwon.html
+++ b/hongwon.html
@@ -199,11 +199,12 @@ icons are from http://phosphoricons.com
             }
             
             #credit {
-                font-size: 0.8rem;
-                margin-top: 40px;
-                margin-left: 40px;
-                padding: 10px;
                 float: right;
+                border-radius: 100%;
+                border: 1px solid var(--accent);
+                padding: 0.3rem;
+                margin-right: 5px;
+                margin-top: 40px;
             }
 
         </style>
