--- a/jaehuin- character page/index.html
+++ b/jaehuin- character page/index.html
@@ -18,7 +18,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
 <!-- external styles -->
-<link rel="stylesheet" href="//yanghongwon.github.io/jaehuin/style.css">
+<link rel="stylesheet" href="//yanghongwon.github.io/jaehuin- character page/style.css">
 
 <style type="text/css">
 
@@ -2282,6 +2282,6 @@
 </div>
 <!-- credit end. do not delete or alter, save for the colors in the :root -->
 
-<script src="//yanghongwon.github.io/jaehuin/javascript.js"></script>
+<script src="//yanghongwon.github.io/jaehuin- character page/javascript.js"></script>
 </body>
 </html>
